docker add commit image